--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
         }
         /* button */
         .btn {
-            margin: 100px;
             padding: 10px 20px;
             border: none;
             outline: none;
@@ -81,7 +80,18 @@
             50% {background-position: 400% 0;}
             100% {background-position: 0 0;}
         }
+        .btn:hover::before {
+            opacity: 1;
+        }
 
+        .btn:active:after {
+            background: transparent;
+        }
+
+        .btn:active {
+            color: #000;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
