--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <button class="btn" onclick="processJSON()">Procesar codigo y Descargar</button><br><br>
     
     <p id="message"></p>
-
+    <pre id="info"></pre>
     <script>
         function decodeBase64() {
             // Obtener el texto en Base64
